--- a/AllThatPicturesWeb/App/Home/Home.html
+++ b/AllThatPicturesWeb/App/Home/Home.html
@@ -18,6 +18,7 @@
 
     <link href="Home.css" rel="stylesheet" type="text/css" />
     <script src="Home.js" type="text/javascript"></script>
+    <link href='../hoverbox.css' rel="stylesheet" type="text/css" media="screen, projection" />
 </head>
 <body>
     <!-- Page content -->
@@ -33,7 +34,52 @@
         <input type="Button" value="Insert Image" id="insertImageBtn" style="margin-top: 10px; padding: 0px; width: 100px;" disabled="disabled" />
         <br />
         <span>Results: </span><div id="results"></div>
-
+    </div>
+    <div>
+    <ul class="hoverbox">
+        <li>
+            <a href="#"><img src="../../Images/photo01.jpg" alt="description" /><img src="../../Images/photo01.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo02.jpg" alt="description" /><img src="../../Images/photo02.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo03.jpg" alt="description" /><img src="../../Images/photo03.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo04.jpg" alt="description" /><img src="../../Images/photo04.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo05.jpg" alt="description" /><img src="../../Images/photo05.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo06.jpg" alt="description" /><img src="../../Images/photo06.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo07.jpg" alt="description" /><img src="../../Images/photo07.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo08.jpg" alt="description" /><img src="../../Images/photo08.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo09.jpg" alt="description" /><img src="../../Images/photo09.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo10.jpg" alt="description" /><img src="../../Images/photo10.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo11.jpg" alt="description" /><img src="../../Images/photo11.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo12.jpg" alt="description" /><img src="../../Images/photo12.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo13.jpg" alt="description" /><img src="../../Images/photo13.jpg" alt="description" class="preview" /></a>
+        </li>
+        <li>
+            <a href="#"><img src="../../Images/photo14.jpg" alt="description" /><img src="../../Images/photo14.jpg" alt="description" class="preview" /></a>
+        </li>
+    </ul>
     </div>
 </body>
 </html>
