--- a/AllThatPicturesWeb/App/Home/Home.html
+++ b/AllThatPicturesWeb/App/Home/Home.html
@@ -38,7 +38,7 @@
     <div>
     <ul class="hoverbox">
         <li>
-            <a href="#"><img src="../../Images/photo01.jpg" alt="description" /><img src="../../Images/photo01.jpg" alt="description" class="preview" /></a>
+            <a href="#"><img src="../../Images/photo01.jpg" alt="description" /><img src="../../Images/photo01.jpg" alt="description" class="preview" id="insertImageLink" /></a>
         </li>
         <li>
             <a href="#"><img src="../../Images/photo02.jpg" alt="description" /><img src="../../Images/photo02.jpg" alt="description" class="preview" /></a>
