Get text from the document and preview the results

--- a/AllThatPicturesWeb/App/Home/Home.html
+++ b/AllThatPicturesWeb/App/Home/Home.html
@@ -23,63 +23,59 @@
 <body>
     <!-- Page content -->
     <div id="Content">
-        <label>Online Picture Address: </label>
-        <input id="Text1" type="text" />
-        <input type="button" id="preViewBtn" value="Preview Picture" />
+        <input type="button" id="searhPictures" value="Search Pictures" />
         <br />
         <br />
-        <img id="prePic" src="" />
+        <br />
+        <br />
+        <span>Results: </span>
+        <br />
     </div>
     <div>
-        <input type="Button" value="Insert Image" id="insertImageBtn" style="margin-top: 10px; padding: 0px; width: 100px;" disabled="disabled" />
-        <br />
-        <span>Results: </span><div id="results"></div>
-    </div>
-    <div>
-    <ul class="hoverbox">
-        <li>
-            <a href="#"><img src="../../Images/photo01.jpg" alt="description" /><img src="../../Images/photo01.jpg" alt="description" class="preview" id="insertImageLink" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo02.jpg" alt="description" /><img src="../../Images/photo02.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo03.jpg" alt="description" /><img src="../../Images/photo03.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo04.jpg" alt="description" /><img src="../../Images/photo04.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo05.jpg" alt="description" /><img src="../../Images/photo05.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo06.jpg" alt="description" /><img src="../../Images/photo06.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo07.jpg" alt="description" /><img src="../../Images/photo07.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo08.jpg" alt="description" /><img src="../../Images/photo08.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo09.jpg" alt="description" /><img src="../../Images/photo09.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo10.jpg" alt="description" /><img src="../../Images/photo10.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo11.jpg" alt="description" /><img src="../../Images/photo11.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo12.jpg" alt="description" /><img src="../../Images/photo12.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo13.jpg" alt="description" /><img src="../../Images/photo13.jpg" alt="description" class="preview" /></a>
-        </li>
-        <li>
-            <a href="#"><img src="../../Images/photo14.jpg" alt="description" /><img src="../../Images/photo14.jpg" alt="description" class="preview" /></a>
-        </li>
-    </ul>
+        <ul class="hoverbox">
+            <li>
+                <a href="#"><img src="" alt="description" id="insertImageLinkThumbnail" /><img src="" alt="description" class="preview" id="insertImageLink" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo02.jpg" alt="description" /><img src="../../Images/photo02.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo03.jpg" alt="description" /><img src="../../Images/photo03.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo04.jpg" alt="description" /><img src="../../Images/photo04.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo05.jpg" alt="description" /><img src="../../Images/photo05.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo06.jpg" alt="description" /><img src="../../Images/photo06.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo07.jpg" alt="description" /><img src="../../Images/photo07.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo08.jpg" alt="description" /><img src="../../Images/photo08.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo09.jpg" alt="description" /><img src="../../Images/photo09.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo10.jpg" alt="description" /><img src="../../Images/photo10.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo11.jpg" alt="description" /><img src="../../Images/photo11.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo12.jpg" alt="description" /><img src="../../Images/photo12.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo13.jpg" alt="description" /><img src="../../Images/photo13.jpg" alt="description" class="preview" /></a>
+            </li>
+            <li>
+                <a href="#"><img src="../../Images/photo14.jpg" alt="description" /><img src="../../Images/photo14.jpg" alt="description" class="preview" /></a>
+            </li>
+        </ul>
     </div>
 </body>
 </html>
