Handling generic event handling for any picture insertion

--- a/AllThatPicturesWeb/App/Home/Home.html
+++ b/AllThatPicturesWeb/App/Home/Home.html
@@ -43,7 +43,7 @@
     <div>
         <ul class="hoverbox">
             <li>
-                <a href="#"><img src="" alt="description" id="insertImageLinkThumbnail" /><img src="" alt="description" class="preview" id="insertImageLink" /></a>
+                <a href="#"><img src="../../Images/photo01.jpg" alt="description" /><img src="../../Images/photo01.jpg" alt="description" class="preview" /></a>
             </li>
             <li>
                 <a href="#"><img src="../../Images/photo02.jpg" alt="description" /><img src="../../Images/photo02.jpg" alt="description" class="preview" /></a>
